syntax = "proto3";

option csharp_namespace = "BCHGrpcService";

package BCHgRPC;

service BCHGrpc {
  rpc GetRatingByPassport (RatingRequest) returns (RatingReply);
}

message RatingRequest {
  string passportNumber = 1;
}

message RatingReply {
  int32 rating = 1;
}